# gitmoji-changelog-rust

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  gen_code.js
.circleci/: config.yml
src/: changelog.rs  cli.rs  commit.rs  error.rs  group.rs  lib.rs  main.rs  version.rs
