[package]
name = "gitmoji-changelog"
version = "0.2.0"
authors = ["Fabien JUIF <fabien.juif@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Do you use gitmoji? Then generate your changelog with this app!"
documentation = "https://docs.rs/crate/gitmoji-changelog"
repository = "https://github.com/fabienjuif/gitmoji-changelog-rust"
readme = "README.md"

[dependencies]
git2 = "0.8.0"
regex = "1.1.0"
semver = "0.9.0"
handlebars = "1.1.0"
serde_json = "1.0.33"
serde_derive = "1.0.82"
serde = "1.0.82"
lazy_static = "1.2.0"
clap = "2.32.0"
